<resources>
    <string name="app_name">EarlyBirdy</string>
    <string name="tab_rank">Rank</string>
    <string name="tab_board">Board</string>
    <string name="tab_home">Home</string>
    <string name="tab_mypage">Mypage</string>
    <string name="title_resetPassword">비밀번호 재설정</string>
    <string name="title_sendEmail">비밀번호 찾기</string>
    <string name="util_tv_email">이메일</string>
    <string name="util_tv_password">비밀번호</string>
    <string name="util_tv_goSignIn">로그인</string>
    <string name="util_tv_goSignUp">회원가입</string>
    <string name="util_et_nickname">닉네임을 입력하세요</string>
    <string name="util_et_email">example@example.com</string>
    <string name="util_et_password">비밀번호를 입력하세요</string>
    <string name="util_et_passwordCheck">비밀번호를 다시 입력하세요</string>
    <string name="util_btn_cancel">취소</string>
    <string name="util_btn_done">확인</string>
    <string name="util_btn_save">저장</string>
    <string name="util_btn_check">사용자 인증</string>
    <string name="util_error_emptyNickname">닉네임을 입력해주세요</string>
    <string name="util_error_emptyEmail">이메일을 입력해주세요</string>
    <string name="util_error_emptyPassword">비밀번호를 입력해주세요</string>
    <string name="util_error_mismatchPassword">비밀번호가 일치하지 않습니다</string>
    <string name="util_error_matchPassword">비밀번호가 일치합니다</string>
    <string name="signIn_tv_findPassword">비밀번호를 잊으셨나요?</string>
    <string name="signIn_tv_exit">나가기</string>
    <string name="signIn_error_failedSign">로그인에 실패하였습니다</string>
    <string name="signIn_tv_exitTitle">종료 확인</string>
    <string name="signIn_tv_exitContent">앱을 종료하시겠습니까?</string>
    <string name="signIn_tv_exitDone">예</string>
    <string name="signIn_tv_exitCancel">아니오</string>
    <string name="signUp_tv_alreadyAccount">이미 계정이 있으신가요?</string>
    <string name="signUp_error_alreadyNickname">이미 가입된 닉네임 입니다</string>
    <string name="signUp_error_alreadyEmail">이미 가입된 이메일 입니다</string>
    <string name="signUp_error_invalidEmail">유효하지 않은 이메일 형식입니다</string>
    <string name="signUp_error_6underPassword">6자 이상의 비밀번호를 입력해주세요</string>
    <string name="signUp_toast_signUpSuccess">회원가입에 성공하였습니다</string>
    <string name="editProfile_tv_updateNickname">닉네임 수정</string>
    <string name="editProfile_btn_updatePassword">비밀번호 변경하기</string>
    <string name="editProfile_toast_updateSuccess">회원정보를 수정하였습니다</string>
    <string name="editProfile_toast_loadUserDataFailed">사용자 정보 로딩에 실패했습니다</string>
    <string name="editProfileDialog_toast_matchPassword">비밀번호가 확인되었습니다</string>
    <string name="editProfileDialog_toast_mismatchPassword">비밀번호가 올바르지 않습니다</string>
    <string name="sign_error_mismatchAccount">재인증에 실패하였습니다</string>
    <string name="deleteDialog_tv_check">정말로 탈퇴하시겠습니까?</string>
    <string name="resetPassword_tv_checkPassword">비밀번호 확인</string>
    <string name="resetPassword_btn_updatePassword">재설정</string>
    <string name="sendEmail_tv_email">회원가입 한 이메일을 입력해주세요</string>
    <string name="sendEmail_btn_send">보내기</string>
    <string name="createPlan_et_setAGoal">오늘의 목표를 입력해주세요</string>
    <string name="alarm_edit">알람 편집</string>
    <string name="alarm_setAlarm">알람 끄기</string>
    <string name="createplan_today_goal">오늘의 목표</string>
    <string name="creatplan_today_goal_edit">오늘의 목표를 입력해주세요.</string>
    <string name="creatplan_cancel">취소</string>
    <string name="creatplan_save">저장</string>
    <string name="editprfile_edit">프로필 수정</string>
    <string name="editprofile_nikname_edit">닉네임 수정</string>
    <string name="editprofile_edit_email">이메일 수정</string>
    <string name="editprofile_enter_email">이메일을 입력해주세요</string>
    <string name="editprofile_pw">비밀번호</string>
    <string name="editprofile_enter_pw">비밀번호를 입력해주세요</string>
    <string name="editprofile_pw_check">비밀번호 확인</string>
    <string name="editprofile_re_enter_pw_">비밀번호를 다시 입력해주세요</string>
    <string name="resetpw_ed_pw">비밀번호 재설정</string>
    <string name="resetpw_pw">비밀번호</string>
    <string name="resetpw_under15word">15자 이하의 비밀번호를 입력하세요</string>
    <string name="resetpw_pw_check_tv">비밀번호 확인</string>
    <string name="resetpw_pw_check_hint">비밀번호 확인</string>
    <string name="resetpw_save">재설정</string>
    <string name="resetpw_out">나가기</string>
    <string name="resetpw_signup">회원가입</string>
    <string name="sendemail_find_pw">비밀번호 찾기</string>
    <string name="sendemail_singup_email">회원가입 한 이메일을 입력해주세요</string>
    <string name="sendemail_example">user@example.com</string>
    <string name="sendemail_send">보내기</string>
    <string name="sendemail_out">나가기</string>
    <string name="sendemail_signup">회원가입</string>
    <string name="setting_setting">설정</string>
    <string name="setting_support">고객 지원</string>
    <string name="setting_openlicense">오픈 라이선스</string>
    <string name="setting_terms">약관</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_delet_account">회원탈퇴</string>
    <string name="resetpw_pw_check_enter">비밀번호를 다시 입력하세요</string>
    <string name="settingdeletedialog_account_delet">정말로 탈퇴하시겠습니까?</string>
    <string name="settingdeletedialog_yes">확인</string>
    <string name="settingdeletedialog_cancel">취소</string>
    <string name="editprfile_change_pw">비밀번호 변경하기</string>
    <string name="setting_auth_fail">비밀번호가 틀립니다.</string>
    <string name="setting_auth_fail_else">재인증에 실패했습니다.</string>
    <string name="edittext_match_password">비밀번호가 일치합니다.</string>
    <string name="edittext_unmatch_password">비밀번호가 일치하지 않습니다.</string>
    <string name="reset_password_enter_password">비밀번호를 입력해주세요</string>
    <string name="reset_password_fail">비밀번호 변경에 실패하였습니다</string>
    <string name="board_login_page">로그인 페이지</string>
    <string name="board_login_test">로그인 테스트</string>
    <string name="board_logout_test">로그아웃 테스트</string>
    <string name="board_edit_profile_test">프로필수정 테스트</string>
    <string name="board_today_goal_test">오늘의목표 테스트</string>
    <string name="home_goodmorning">활기찬 아침</string>
    <string name="home_time">8:00 AM</string>
    <string name="home_today_goal">오늘의 목표</string>
    <string name="home_today_percent">데일리 성과</string>
    <string name="mypage_nickname">닉네임</string>
    <string name="mypage_level">레벨 1</string>
    <string name="mypage_exp">0/50xp</string>
    <string name="todomain_detail">TextView</string>
    <string name="settingdetail_detail_name">내용페이지 이름</string>
    <string name="settingdetail_detail">내용</string>
    <string name="setting_alarm_setting">알림설정</string>
        <string-array name="quotes">
            <item>아침은 모든 일의 시작이다.</item>
            <item>아침 일찍 일어나는 새가 벌레를 잡는다.</item>
            <item>아침은 새로운 일의 시작이고 성공의 첫 걸음이다.</item>
            <item>아침에 일어나기 싫다면, 일어나서 그 이유를 찾아보라.</item>
            <item>하루는 아침에 일어나서 생각한 만큼 이루어진다.</item>
            <item>아침이 오면 무엇이든지 할 수 있다.</item>
            <item>아침이면 새로운 날의 찬스가 주어진다.</item>
            <item>아침에 해야 할 일을 지금 하면, 오후에 더 많은 시간이 생긴다.</item>
            <item>늦게 일어나서 아침을 짧게 하지 마라.</item>
            <item>이른 아침은 입에 황금을 물고 있다.</item>
        </string-array>
    <string name="boardread_title">게시글</string>
    <string name="boardread_edit">글수정</string>
    <string name="boardread_delet">글삭제</string>
    <string name="boardread_writer">작성자</string>
    <string name="boardread_sample_nickname">임시 닉네임</string>
    <string name="boardread_creat_time">작성 시간</string>
    <string name="boardread_creat_detail">내용</string>
    <string name="boardread_contents_title">제목</string>
    <string name="boardread_enter_title">제목을 입력해주세요</string>
    <string name="boardread_enter_contents">게시글을 작성해주세요</string>
    <string name="boardread_comment">댓글</string>
    <string name="boardread_enter_comment">내용을 입력해주세요</string>
    <string name="boardread_post">게시</string>
    <string name="boardread_like">추천</string>
    <string name="boardwrite_title">게시글 작성</string>
    <string name="boardwrite_community_delet">글삭제</string>
    <string name="boardwrite_add_picture">사진첨부</string>
    <string name="boardwrite_creat_contents">게시글작성</string>
    <string name="boardwrite_contents">내용</string>
    <string name="boardwrite_contents_title">제목</string>
    <string name="boardwrite_enter_title">제목을 입력해주세요</string>
    <string name="boardwrite_enter_contents">게시글을 작성해주세요</string>
    <string name="activitydetail_title">설정항목</string>
    <string name="activitydetail_contents">내용</string>
    <string name="profiledialog_cancel">취소</string>
    <string name="profiledialog_save">저장</string>
    <string name="dialogexp_complit">미션 완료!</string>
    <string name="dialogexp_check">확인</string>
    <string name="failtoadd_cancel">닫기</string>
    <string name="failtoadd_message">이미 지난 날짜에는 Todo를 작성할 수 없습니다.</string>
    <string name="board_title">자유게시판</string>
    <string name="board_community_defalt">전체글</string>
    <string name="board_my_post">내글</string>
    <string name="board_post">게시글작성</string>
    <string name="home_select_goal">목표를 채워주세요</string>
    <string name="ranking_title">랭킹보드</string>
    <string name="ranking_community">자유게시판</string>
    <string name="ranking_challenge_community">챌린지게시판</string>
    <string name="ranking_rankingboard">랭킹보드</string>
    <string name="itemboard_writer">작성자</string>
    <string name="itemboard_title">글 제목</string>
    <string name="itemchallenge_title">챌린지게시판</string>
    <string name="itemchallenge_community">자유게시판</string>
    <string name="itemchallenge_challenge_community">챌린지게시판</string>
    <string name="itemchallenge_rankingboard">랭킹보드</string>
    <string name="itemchallenge_nickname">닉네임</string>
    <string name="itemchallenge_contents">내용</string>
    <string name="itemranking_rank">순위</string>
    <string name="itemranking_nickname">닉네임</string>
    <string name="itemranking_exp">경험치량</string>
    <string name="setting_connect_error_toast">연결 오류 발생</string>
    <string name="setting_logout_toast">로그아웃 되었습니다. 로그인 페이지로 이동합니다.</string>
    <string name="modify_permissionRequired"></string>
    <string name="modify_profilePermission"></string>
    <string name="modify_agree"></string>
    <string name="modify_cancel"></string>
    <string name="edit_board_error">작성자만 게시글을 수정할 수 있습니다</string>
    <string name="delete_board_error">게시글 삭제에 실패했습니다</string>
    <string name="delete_board_user_error">작성자만 게시글을 삭제할 수 있습니다.</string>
    <string name="delete_reply_user_error">댓글 작성자만 댓글을 삭제할 수 있습니다</string>
    <string name="reply_blank_error">댓글을 입력해주세요</string>
    <string name="get_photo_error">사진을 가져오지 못했습니다</string>
    <string name="blank_title">제목을 입력해주세요</string>
    <string name="blank_content">내용을 입력해주세요</string>
    <string name="dialog_plan_limit">오늘의 목표는 3개까지 작성 가능합니다</string>
    <string name="dialog_passed_date">이미 지난 날짜에는 Todo를 작성할 수 없습니다</string>
    <string name="toast_blank_plan">오늘의 계획을 입력하세요</string>
</resources>