<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".board.board_read.BoardReadActivity">


    <!--    배경 그라데이션 이미지-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_gr3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/boardread_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/tv_update"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:text="수정"-->
<!--        android:textColor="@color/icon2"-->
<!--        android:textSize="18dp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_roundig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title">

        <TextView
            android:id="@+id/btn_communityDefalt"
            android:layout_width="101dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_setting"
            android:gravity="center"
            android:text="@string/boardread_edit"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/btn_addPicture"
            android:layout_width="101dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_setting"
            android:gravity="center"
            android:text="@string/boardread_delet"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_communityDefalt"
            app:layout_constraintTop_toTopOf="@+id/btn_communityDefalt" />

        <TextView
            android:id="@+id/tv_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/boardread_writer"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_contentTitle" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/boardread_sample_nickname"
            app:layout_constraintBottom_toBottomOf="@id/tv_writer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_createdDatetime"
            app:layout_constraintTop_toTopOf="@id/tv_writer" />

        <TextView
            android:id="@+id/tv_creationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/boardread_creat_time"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_writer" />

        <TextView
            android:id="@+id/tv_createdDatetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="23.10.26.19.02"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_creationTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_creationTime"
            app:layout_constraintTop_toTopOf="@id/tv_creationTime" />

        <TextView
            android:id="@+id/tv_contnets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/boardread_creat_detail"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_creationTime" />

        <TextView
            android:id="@+id/tv_contentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/boardread_contents_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_communityDefalt" />

        <TextView
            android:id="@+id/et_contentsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/boardread_enter_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_nickname"
            app:layout_constraintTop_toTopOf="@+id/tv_contentTitle" />

        <TextView
            android:id="@+id/et_ContentsDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/boardread_enter_contents"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_contnets"
            app:layout_constraintTop_toBottomOf="@+id/tv_contnets"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_ContentsDetail" />

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/boardread_comment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_picture" />

        <TextView
            android:id="@+id/tv_commentEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardread_enter_comment"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_comment" />

        <TextView
            android:id="@+id/tv_commitadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:background="@drawable/btn_setting"
            android:text="@string/boardread_post"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_commentEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_commentEdit" />

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardread_like"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_comment"
            app:layout_constraintStart_toStartOf="@+id/tv_commitadd"
            app:layout_constraintTop_toTopOf="@+id/tv_comment" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@+id/tv_like"
            app:layout_constraintStart_toEndOf="@+id/tv_like"
            app:layout_constraintTop_toTopOf="@+id/tv_like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="+15"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>